--- a/configs/stable-diffusion/v1-finetune.yaml
+++ b/configs/stable-diffusion/v1-finetune.yaml
@@ -22,7 +22,7 @@ model:
       target: ldm.modules.embedding_manager.EmbeddingManager
       params:
         placeholder_strings: ["*"]
-        initializer_words: ["fire industry"]
+        initializer_words: [""]
         per_image_tokens: false
         num_vectors_per_token: 1
         progressive_words: False
@@ -77,14 +77,14 @@ data:
     num_workers: 2
     wrap: false
     train:
-      target: ldm.data.personalized.PersonalizedBase
+      target: ldm.data.personalized2.PersonalizedBase
       params:
         size: 512
         set: train
         per_image_tokens: false
         repeats: 100
     validation:
-      target: ldm.data.personalized.PersonalizedBase
+      target: ldm.data.personalized2.PersonalizedBase
       params:
         size: 512
         set: val
